@@ -1,4 +1,4 @@
 #!/bin/bash
 SCRIPT=$(readlink -f "$0")
 SCRIPTPATH=$(dirname "$SCRIPT")
-java "-XX:+UseStringDeduplication" "-Dfile.encoding=UTF-8" -jar "$SCRIPTPATH/res/sono.jar" $*
+java "-XX:+AggressiveOpts" "-Dfile.encoding=UTF-8" -jar "$SCRIPTPATH/res/sono.jar" $*
